--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <h1>Breif Overview</h1>
     <p>Hi, my name is Saul Ortega I am a senior at Anaheim High School and when I graduate this year I plan on going to college.</p>
 
-</body>
+    <h1>8 Letter Hangman Game!</h1>
+    <a href="https://miniature-space-computing-machine-pjr9x5rjjqvw26597-5501.app.github.dev/javascript/input.html">Click to Play 8 Letter Hangman</a></body>
 </html>
